fix(ui): align index number position between main grid and mini-grid

--- a/cocro-angular/src/app/presentation/features/grid/editor/global-clue-preview/global-clue-preview.component.scss
+++ b/cocro-angular/src/app/presentation/features/grid/editor/global-clue-preview/global-clue-preview.component.scss
@@ -40,7 +40,7 @@
 
 .gcp__cell-num {
   position: absolute;
-  top: 0px;
+  top: 1px;
   left: 2px;
   font-size: 0.45rem;
   font-family: var(--font-ui);
