--- a/cocro-angular/src/app/presentation/shared/grid/inputs/letter/letter-input.component.scss
+++ b/cocro-angular/src/app/presentation/shared/grid/inputs/letter/letter-input.component.scss
@@ -9,7 +9,7 @@
 
 .letter-input__number {
   position: absolute;
-  top: 0px;
+  top: -1px;
   left: 2px;
   font-size: 0.45rem;
   font-family: var(--font-ui);
